--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,15 @@ h6 {
 	   text-overflow: ellipsis;
 }
 
+.vertical-center {
+	margin: 0;
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	    transform: translateY(-50%);
+}
+
 /* ---------------------------------------- */
 /* ==            HEADER                */
 /*---------------------------------------- */
@@ -280,7 +289,7 @@ h6 {
 	width: 1rem;
 	height: 1.5rem;
 	position: absolute;
-	right: 1rem;
+	right: 0rem;
 	transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
